# events-backend

./: .env.example  .gitignore  Cargo.toml  GEMINI.md  LICENSE  README.md  TESTING.md  api.tsp  mise.toml  package-lock.json  package.json  schema.sql  tspconfig.yaml  wrangler.toml
.devcontainer/: Dockerfile  devcontainer.json
.gemini/skills/skill-open-design/: SKILL.md
.gemini/skills/skill-open-design/references/: design-tokens.md  motion-patterns.md  open-design-principles.md
.github/workflows/: ci-cd.yml  deploy.yml
.zed/: settings.json
bruno/: Create Venue.bru  Get Venues.bru  bruno.json
bruno/environments/: local.bru  production.bru
features/: README.md  fetch_venues.feature  list_venue.feature
models/: openapi.yaml
scripts/: seed-api.js  setup-hooks.sh
src/: lib.rs
src/adapters/database/: d1.rs  mock.rs  mod.rs
src/adapters/storage/: cloudflare_images.rs  local.rs  mock.rs  mod.rs  r2.rs
src/handlers/: image.rs  venue.rs
src/models/: config.rs  dtos.rs  entities.rs  mod.rs
src/ports/: database.rs  mod.rs  storage.rs
src/services/: mod.rs  venue.rs
tests/: venue_fetching.rs  venue_listing.rs
