[package]
name = "event-app-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.8.1", features = ["d1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
uuid = { version = "1.10", features = ["v7", "serde"] }

[dev-dependencies]
cucumber = "0.23"
tokio = { version = "1.0", features = ["macros", "rt", "sync", "io-util", "time"] }
